Ticket #6933: Adding new strings to be localized and fixing the way the status value is displayed on terminal e-mail

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -295,8 +295,10 @@ en:
   mail_subject_assign_task: "[%{team} - %{project}] A task was assigned to you"
   mail_subject_unassign_task: "[%{team} - %{project}] A task was unassigned from you"
   mail_subject_update_status: "[%{team} - %{project}] A media item status was marked as %{status}"
-  mail_assign_status: "%{author} assigned a media item to you. It's titled:"
-  mail_unassign_status: "%{author} unassigned a media item from you. It's titled:"
+  mail_assign_verification_status: "%{author} assigned a media item to you. It's titled:"
+  mail_unassign_verification_status: "%{author} unassigned a media item from you. It's titled:"
+  mail_assign_translation_status: "%{author} assigned a media item to you. It's titled:"
+  mail_unassign_translation_status: "%{author} unassigned a media item from you. It's titled:"
   mail_assign_task: "%{author} assigned a task \"%{task}\" to you. It's on the media item titled:"
   mail_unassign_task: "%{author} unassigned a task \"%{task}\" from you. It's on the media item titled:"
   mail_update_status: "%{author} marked \"%{title}\" as %{status}"
