Ticket #7059: (1) Task comments are ordered with oldest first (2) Adding a migration to convert existing task answer notes to task comments (3) Number of notes of media is updated when comment is added/removed to/from task (4) Notify on Slack when comment is added (5) Add entry to verification timeline when task comment is added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -321,6 +321,7 @@ en:
   blank_active_status_for_custom_translation_status: "Please provide an 'active' value for the custom translation statuses"
   blank_default_status_for_custom_verification_status: "Please provide a 'default' value for the custom verification statuses"
   blank_active_status_for_custom_verification_status: "Please provide an 'active' value for the custom verification statuses"
+  slack_save_task_comment: "*%{user}* added a note to task *%{task}* in %{url} in *%{project}*: %{comment}"
   project_export_download_mail_csv: "Hello!
 
 
